--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <div id="controls">
     <button id="toggleCaptionsBtn">Hide Captions (C)</button>
-    <button id="fullscreenBtn">Fullscreen</button>
+    <button id="fullscreenBtn">Fullscreen (F)</button>
   </div>
 
   <div id="video-container">
@@ -83,9 +83,7 @@
     let captions = [[], []];
     let captionsVisible = true;
 
-    dropZone.addEventListener("dragover", e => {
-      e.preventDefault();
-    });
+    dropZone.addEventListener("dragover", e => e.preventDefault());
 
     dropZone.addEventListener("drop", async e => {
       e.preventDefault();
@@ -160,19 +158,41 @@
       }
     }
 
-    toggleBtn.addEventListener("click", toggleCaptions);
-
-    fullscreenBtn.addEventListener("click", () => {
+    function toggleFullscreen() {
       if (document.fullscreenElement) {
         document.exitFullscreen();
       } else {
         videoContainer.requestFullscreen();
       }
-    });
+    }
+
+    function togglePlayPause() {
+      if (video.paused) {
+        video.play();
+      } else {
+        video.pause();
+      }
+    }
+
+    toggleBtn.addEventListener("click", toggleCaptions);
+    fullscreenBtn.addEventListener("click", toggleFullscreen);
 
     document.addEventListener("keydown", e => {
-      if (e.key.toLowerCase() === 'c') {
+      if (e.target.tagName.toLowerCase() === 'input' || e.target.tagName.toLowerCase() === 'textarea') return;
+
+      if (e.key === 'c' || e.key === 'C') {
+        e.preventDefault();
         toggleCaptions();
+      }
+
+      if (e.key === 'f' || e.key === 'F') {
+        e.preventDefault();
+        toggleFullscreen();
+      }
+
+      if (e.code === 'Space') {
+        e.preventDefault();
+        togglePlayPause();
       }
     });
   </script>
