--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 
-  <div id="drop-zone">Drop a video file and 2 .srt files</div>
+  <div id="drop-zone">Drag & Drop a video file and 2 subtitle files (.srt)</div>
 
   <div id="controls">
     <button id="toggleCaptionsBtn">Hide Captions (C)</button>
