--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 <body>
 
   <h1>WebSRT</h1>
-  <p>Drag & drop one video file AND two subtitle (.srt) files below</p>
-  <div id="drop-zone">three files here</div>
+  <p>drag & drop one video file AND two subtitle (.srt) files below</p>
+  <div id="drop-zone">drop those three files here</div>
+  <p>spacebar to play/pause video</p>p
+  <p>← → arrow keys skip backwards or forwards five seconds </p>
 
   <div id="controls">
     <button id="toggleCaptionsBtn">Hide Captions (C)</button>
