--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
   <h1>WebSRT</h1>
   <p>drag & drop one video file AND two subtitle (.srt) files below</p>
-  <div id="drop-zone">drop those three files here</div>
-  <p>spacebar to play/pause video</p>p
+  <div id="drop-zone">drag & drop three files here</div>
+  <p>spacebar to play/pause video</p>
   <p>← → arrow keys skip backwards or forwards five seconds </p>
 
   <div id="controls">
