--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <p>drag & drop one video file AND two subtitle (.srt) files below</p>
   <div id="drop-zone">drag & drop three files here</div>
   <p>spacebar to play/pause video</p>
-  <p>← → arrow keys skip backwards or forwards five seconds </p>
+  <p>arrow keys ← → to skip backwards or forwards five seconds </p>
 
   <div id="controls">
     <button id="toggleCaptionsBtn">Hide Captions (C)</button>
