--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <h1>WebSRT</h1>
   <p>drag & drop one video file AND two subtitle (.srt) files below</p>
   <div id="drop-zone">drag & drop three files here</div>
-  <p>spacebar to play/pause video</p>
+  <p>spacebar to play or pause video</p>
   <p>arrow keys ← → to skip backwards or forwards five seconds </p>
 
   <div id="controls">
