--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
 </head>
 <body>
 
-<h1>WebSRT</h1>
-  <p>drag & drop one video file AND two subtitle (.srt) files below</p>
+<h1 style="text-align:center;">WebSRT</h1>
+  <p>drag & drop one video file and two .srt subtitle files below</p>
   <div id="drop-zone">drag & drop three files here</div>
-  <p>spacebar to play or pause video</p>
-  <p>arrow keys ← → to skip backwards or forwards five seconds</p>
+<ul style="text-align:center; list-style:none; padding:0; margin:10px 0;">
+    <li>Spacebar: play or pause video</li>
+    <li>Arrow keys (← →): skip backwards or forwards five seconds</li>
+</ul>
 
   <div id="controls">
     <button id="toggleCaptionsBtn">Hide Captions (C)</button>
