--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
 </head>
 <body>
 
-<h1 style="text-align:center;">WebSRT</h1>
-  <p>drag & drop one video file and two .srt subtitle files below</p>
-  <div id="drop-zone">drag & drop three files here</div>
+<div style="text-align:center;">
+    <h1>WebSRT</h1>
+    <p>drag & drop one video file and two .srt subtitle files below</p>
+    <div id="drop-zone" style="display:inline-block;">drag & drop three files here</div>
+</div>
 <ul style="text-align:center; list-style:none; padding:0; margin:10px 0;">
     <li>Spacebar: play or pause video</li>
     <li>Arrow keys (← →): skip backwards or forwards five seconds</li>
