--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <div style="text-align:center;">
     <h1>WebSRT</h1>
-    <p>drag & drop one video file and two .srt subtitle files below</p>
+    <p>drag & drop one video file and two subtitle .srt files below</p>
     <div id="drop-zone" style="display:inline-block; text-align:center; width:100%;">drag & drop three files here</div>
 </div>
 <ul style="text-align:center; list-style:none; padding:0; margin:10px 0;">
