--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       color: #fff;
       font-family: sans-serif;
       height: 100%;
-      overflow: hidden;
+      overflow: auto;
     }
 
     #drop-zone {
