--- a/index.html
+++ b/index.html
@@ -113,15 +113,13 @@
 
   <div style="text-align:center;">
     <h1>WebSRT</h1>
-    <p>drag & drop one video file and two .srt subtitle files below</p>
+    <p>drag & drop one video file and two subtitle .srt files below</p>
     <div id="drop-zone">drag & drop three files here</div>
   </div>
 
   <ul>
-    <li>Spacebar: play or pause video</li>
-    <li>Arrow keys (← →): skip backwards or forwards five seconds</li>
-    <li>C: show/hide captions</li>
-    <li>F: toggle fullscreen</li>
+    <li>spacebar: play or pause video</li>
+    <li>arrow keys (← →): skip backwards or forwards five seconds</li>
   </ul>
 
   <div id="controls">
