--- a/index.html
+++ b/index.html
@@ -66,16 +66,11 @@
       }
     }
 
-    :fullscreen .caption,
-    :-webkit-full-screen .caption,
-    :-moz-full-screen .caption {
-      position: absolute;
-      width: 100%;
-      text-align: center;
-      font-size: 2.5vw;
-      color: white;
-      text-shadow: 2px 2px 4px #000;
-      z-index: 1000;
+    /* Ensure captions are visible in fullscreen */
+    #video-container:fullscreen .caption,
+    #video-container:-webkit-full-screen .caption,
+    #video-container:-moz-full-screen .caption {
+      display: block;
     }
 
     #controls {
@@ -251,6 +246,14 @@
       if (e.code === 'Space') {
         e.preventDefault();
         togglePlayPause();
+      }
+
+      if (e.key === 'ArrowRight') {
+        video.currentTime += 5;
+      }
+
+      if (e.key === 'ArrowLeft') {
+        video.currentTime -= 5;
       }
     });
   </script>
