--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       }
     }
 
-    /* Ensure captions are visible in fullscreen */
+    /* Fix: Show captions in fullscreen */
     #video-container:fullscreen .caption,
     #video-container:-webkit-full-screen .caption,
     #video-container:-moz-full-screen .caption {
