--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       width: 100%;
       height: auto;
       background: #000;
+      display: block;
     }
 
     .caption {
@@ -45,13 +46,14 @@
       color: white;
       text-shadow: 2px 2px 4px #000;
       pointer-events: none;
-      line-height: 1.2;
+      line-height: 1.4;
       padding: 0 1em;
       box-sizing: border-box;
       z-index: 10;
+      white-space: pre-line;
     }
 
-    #caption1 { bottom: 120px; }
+    #caption1 { bottom: 140px; }
     #caption2 { bottom: 80px; }
 
     @media (max-width: 600px) {
@@ -183,8 +185,8 @@
     }
 
     function parseTime(timeStr) {
-      const [h, m, s] = timeStr.split(':');
-      const [sec, ms] = s.split(',');
+      const [h, m, s] = timeStr.split(":");
+      const [sec, ms] = s.split(",");
       return (+h) * 3600 + (+m) * 60 + (+sec) + (+ms) / 1000;
     }
 
@@ -257,6 +259,5 @@
       }
     });
   </script>
-
 </body>
 </html>
