--- a/index.html
+++ b/index.html
@@ -43,27 +43,36 @@
       position: absolute;
       width: 100%;
       text-align: center;
-      font-size: 2.5vw;
       color: white;
       text-shadow: 2px 2px 4px #000;
-      line-height: 1.4;
       padding: 0 1em;
       pointer-events: none;
       z-index: 1000;
       white-space: pre-wrap;
+      max-width: 80%;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 2vw;
+      line-height: 1.6;
+      padding: 0.3em 1.5em;
+      background: rgba(0,0,0,0.6);
+      border-radius: 0.3em;
+      box-sizing: border-box;
+      word-break: break-word;
     }
 
     #caption1 { bottom: 15%; }
     #caption2 { bottom: 8%; }
 
+    /* Ensure captions are visible in fullscreen for both container and video */
     #video-container:fullscreen .caption,
     #video-container:-webkit-full-screen .caption,
     #video-container:-moz-full-screen .caption,
-    #video-container:-ms-fullscreen .caption {
-      display: block;
-    }
-    /* Ensure captions are visible in fullscreen */
-    #video-container .caption {
+    #video-container:-ms-fullscreen .caption,
+    video:fullscreen ~ .caption,
+    video:-webkit-full-screen ~ .caption,
+    video:-moz-full-screen ~ .caption,
+    video:-ms-fullscreen ~ .caption {
       display: block;
     }
 
@@ -80,20 +89,6 @@
       border: 1px solid #555;
       cursor: pointer;
       margin: 0 10px;
-    }
-
-    /* Caption formatting*/
-    .caption {
-      max-width: 80%;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 2vw;
-      line-height: 1.6;
-      padding: 0.3em 1.5em;
-      background: rgba(0,0,0,0.6);
-      border-radius: 0.3em;
-      box-sizing: border-box;
-      word-break: break-word;
     }
 
     button:hover {
