--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </style>
 </head>
 <body>
-
+<h1>WebSRT</h1>
   <div id="drop-zone">drag & drop one video file and two subtitle .srt files</div>
   <p>spacebar to play and pause</p>
   <p>arrow keys to skip backward and forward</p>
